# advent-of-code

./: .vimspector.json  Cargo.toml  justfile
crane/src/: crane.rs  crates.rs  lib.rs  stack.rs
day_1/: Cargo.toml
day_1/src/: main.rs
day_2/: Cargo.toml
day_2/src/: main.rs
day_3/: Cargo.toml
day_3/src/: main.rs
day_4/: Cargo.toml
day_4/src/: main.rs
day_5/: Cargo.toml
day_5/src/: main.rs
day_6/: Cargo.toml
day_6/src/: main.rs
day_7/: Cargo.toml
day_7/src/: main.rs
day_8/: Cargo.toml
day_8/src/: main.rs
day_9/: Cargo.toml
day_9/src/: head.rs  knot.rs  main.rs  tail.rs  traits.rs
elves/src/: cleaning_area.rs  elves.rs  lib.rs  meal.rs  pacts.rs
forest/src/: lib.rs
ioutils/: Cargo.toml
ioutils/src/: lib.rs
os/src/: fs.rs  shell.rs
os/src/fs/: dir.rs  file.rs  sizable.rs
os/src/shell/: sh.rs
rock_paper_scissors/: Cargo.toml
rock_paper_scissors/src/: lib.rs
rucksacks/src/: lib.rs
