[package]
name = "day_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elves = { path = "../elves" }
ioutils = { path = "../ioutils" }
clap = { version = "4.0.32", features = ["derive"] }
rock_paper_scissors = { path = "../rock_paper_scissors" }
